--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
 		<header>
-			<%= link_to 'List of Expenses', '/expenses/index' %>
+			<%= link_to 'List of Expenses', '/expenses' %>
 			<%= link_to 'New', '/expenses/new' %>
 		</header>
 
