--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -6,7 +6,7 @@
 			<% end %>
 		</div>
 
-		<%= form_tag '/expenses/create' do %>
+		<%= form_tag '/expenses' do %>
 			<label for="amount"></label>
 			<input type="number" name="amount" id="amout">
 
