--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+ul { 
+    list-style: none;
+    padding-left: 0;
+}
+
+li {
+    /*width: 50%;*/
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.title { 
+    display: block; 
+    color: pink;
+}
