header and new-form layout updated.

--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -6,7 +6,7 @@
 			<% end %>
 		</div>
 
-		<%= form_tag '/expenses' do %>
+		<%= form_tag '/expenses', class: 'center' do %>
 			<label for="amount"></label>
 			<input type="number" name="amount" id="amout">
 
