--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
   <body>
 		<header>
 		  <ul>
-  		  <li><%= link_to 'Money Log', '/', class: "title" %></li>
-  		  <li>
+  		  <li class="left"><%= link_to 'Money Log', '/', class: "title" %></li>
+  		  <li class="right">
   		    <%= link_to 'Expenses', '/expenses' %>
   		  </li>
-  		  <li>
+  		  <li class="right">
   		    <%= link_to 'New', '/expenses/new' %>
   		  </li>
 		  </ul>
